--- a/main.css
+++ b/main.css
@@ -33,10 +33,11 @@ a {color: salmon;}
 	position: sticky;
 	cursor: url("images/cursor2.png"),auto ;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-auto-rows: 30vmin;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-rows: 2fr 2fr 2fr 2fr 1fr;
+	/*grid-auto-rows: 30vmin;*/
     grid-column-gap: 2%; 
-    grid-row-gap: 100px;
+    grid-row-gap: 50px;
     justify-content: center;
     align-content: center;
     background-color: inherit;
@@ -50,7 +51,8 @@ a {color: salmon;}
 	grid-row-start: 1;
 	grid-row-end: 1;
 		background-color: #fff5e6;
-		margin-top: 4vmax;
+		margin-top: 3vmax;
+		padding-top: 4vmin;
 		text-align:center;
  		font-size: 3vmax;
  	/*	border-style: dotted; border-radius: 40px; border-width: 5px; border-color: white;*/
@@ -168,6 +170,72 @@ a {color: salmon;}
 		/*border-style: dotted; border-radius: 20px; border-color: white;*/
 }
 
+.box10 { 
+	grid-column-start: 1;
+	grid-column-end: 1;
+	grid-row-start: 4;
+	grid-row-end: 4;
+		background-color: #fff5e6;
+		text-align:center;
+		font-size: 2vmax;
+		height: auto;
+	margin: auto;
+		/*border-style: dotted; border-radius: 20px; border-color: white;*/
+}
+.box11 { 
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 4;
+	grid-row-end: 4;
+		background-color: #fff5e6;
+		text-align:center;
+		font-size: 2vmax;
+		height: auto;
+	margin: auto;
+		/*border-style: dotted; border-radius: 20px; border-color: white;*/
+}
+.box12 { 
+	grid-column-start: 3;
+	grid-column-end: 3;
+	grid-row-start:4;
+	grid-row-end: 4;
+		background-color: #fff5e6;
+		text-align:center;
+		font-size: 2vmax;
+		height: auto;
+	margin: auto;
+		/*border-style: dotted; border-radius: 20px; border-color: white;*/
+}
+
+.box13 { 
+	grid-column-start: 4;
+	grid-column-end: 4;
+	grid-row-start: 4;
+	grid-row-end: 4;
+		background-color: #fff5e6;
+		text-align:center;
+		font-size: 2vmax;
+		height: auto;
+	margin: auto;
+		/*border-style: dotted; border-radius: 20px; border-color: white;*/
+}
+
+
+.footer {
+	grid-column-start: 1;
+	grid-column-end: 5;
+  	grid-row-start: 5;
+  	grid-row-end: 5;
+     justify-content: center;
+     vertical-align: text-bottom;
+    align-content: center;
+    font-family: eb garamond;
+ 	font-size: 1.5vmax;
+ 	text-align: center;
+ 	padding-top: 15vmin;
+/* 	 display: table-cell;
+  vertical-align: bottom;*/
+}
 
 
 .container .box1:hover {
@@ -248,6 +316,46 @@ a {color: salmon;}
 }
 
 .container .box9:hover {
+
+		/*background-color: salmon;*/color: salmon;
+		border-style: dotted; border-radius: 20px; border-color: white;
+		/*box-shadow: 1vmin 1vmin blue;*/
+		
+
+	
+}
+
+.container .box10:hover {
+
+		/*background-color: salmon;*/color: salmon;
+		border-style: dotted; border-radius: 20px; border-color: white;
+		/*box-shadow: 1vmin 1vmin blue;*/
+		
+
+	
+}
+
+.container .box11:hover {
+
+		/*background-color: salmon;*/color: salmon;
+		border-style: dotted; border-radius: 20px; border-color: white;
+		/*box-shadow: 1vmin 1vmin blue;*/
+		
+
+	
+}
+
+.container .box12:hover {
+
+		/*background-color: salmon;*/color: salmon;
+		border-style: dotted; border-radius: 20px; border-color: white;
+		/*box-shadow: 1vmin 1vmin blue;*/
+		
+
+	
+}
+
+.container .box13:hover {
 
 		/*background-color: salmon;*/color: salmon;
 		border-style: dotted; border-radius: 20px; border-color: white;
