--- a/page2/style.css
+++ b/page2/style.css
@@ -4,7 +4,7 @@
   position: fixed;
   width: 125px;
   height: 125px;
-  opacity: 0.65;
+  opacity: 0.45;
   background-color: salmon;
   padding: 5px;
 
@@ -13,25 +13,26 @@
 body{
 background-color:  #fff5e6;
 font-family: EB Garamond;
-color: blue
+color: black;
+font-size: 2.3vh;
 }
 
 
 .name{
   position: absolute;
   left: 50px;
-  color: blue;
+  color: black;
 }
 
 
 .hoverBox:hover {
-  transform: scale(1.5);  }
+  transform: scale(2.5);  }
 
-a:link {color: blue;
+a:link {color: black;
 }
 
 a:visited {
-  color: blue;
+  color: black;
 }
 
 a:hover {
@@ -41,3 +42,4 @@ a:hover {
 #list:hover {
   color: salmon;
 }
+
