--- a/page2/style.css
+++ b/page2/style.css
@@ -1,4 +1,5 @@
-.hoverBox {
+/*//hi! hope you are having a swell day*/
+.circleDiv {
   border: 2px;
   border-radius: 150px;
   position: fixed;
@@ -25,7 +26,7 @@ font-size: 2.3vh;
 }
 
 
-.hoverBox:hover {
+.circleDiv:hover {
   transform: scale(2.5);  }
 
 a:link {color: black;
@@ -55,7 +56,7 @@ mark:hover {
 color: salmon;
 }
 
-#projsHeading { 
+#projectsHeading { 
 text-decoration: underline;
  }
 
